--- a/html/Bio.html
+++ b/html/Bio.html
@@ -65,11 +65,11 @@
         </header>
 
         <!-- Main Content ---------------------------->
-        <main>
+        <main class="mb-5">
 
             <!-- Page Introduction -->
             <div class="text-white container text-left pt-5 pb-4">
-                <p class="text-introduction" style="font-size:50px; color: black;">
+                <p class="text-introduction">
                     HELLO. I’M ALEX, A COMPUTER SCIENCE STUDENT AND MATH TUTOR.
                     <br>
                     I'M ALSO THE PROJECT MANAGER OF A TEAM & AN ASPIRING ENTREPRENEUR
@@ -88,52 +88,59 @@
                                 I
                                 lived, there weren’t any big grocery stores or large restaurant chains, instead every
                                 business in the area was a small business created by a member of the community. At the
-                                age
-                                of 5, I decided to try and sell candies and drawings and I achieved some mild success,
+                                <strong>age of 5</strong>, I decided to try and sell candies and drawings and I achieved
+                                some <strong>mild success</strong>,
                                 that
-                                taught me that it’s possible for anyone to start a business and so began my love for
+                                taught me that it’s possible for anyone to start a business, and so began my love for
                                 entrepreneurship. Around the same age, I had my first encounter with video games and
                                 instantly became fascinated by them. In wanting to create my own video game, I learned
                                 about
                                 what computers were and became obsessed with owning one, but unfortunately during that
                                 time
-                                computers were extremely expensive. At the age of nine, I was able to move to the United
+                                computers were extremely expensive. At the <strong>age of nine</strong>, I was able to
+                                move to the United
                                 States and about a year later my mother was able to buy a computer. Since that day,
                                 computers and technology became such an important part of life, that I enrolled into
                                 every
-                                computer-based class that I could in school. At 11, I started creating video games using
+                                computer-based class that I could in school. <strong>At 11</strong>, I started creating
+                                video games using
                                 a
-                                program called “RPG Maker” and that led into me learning about what programming was.
+                                program called “RPG Maker” and that led into me learning about what
+                                programming was.
                             </p>
                         </div>
 
                         <div class="col-12 col-md-6 text-bio-par">
                             <p>
-                                In my pursuit of wanting to learn more, I decided to attend a technical high school,
+                                In my pursuit of wanting to learn more, I decided to attend a technical high school
                                 that
-                                offered a “Business Computer Programming” program. My sophomore year of high school I
-                                entered the program, and at 15 I officially started learning how to code. I quickly fell
+                                offered a <strong>“Business Computer Programming”</strong> program. My sophomore year of
+                                high school I
+                                entered the program and <strong>at 15 I officially started learning how to
+                                    code</strong>. I quickly fell
                                 in
                                 love with it and realized that I could leverage my technical skills with my dreams of
-                                entrepreneurship. At 18 I enrolled into college, majoring in computer science. For the
+                                entrepreneurship. <strong>At 18</strong> I enrolled into college, majoring in
+                                <strong>computer science</strong>. For the
                                 next
                                 couple of years my life unfortunately went down a bad road, leading to me almost losing
                                 my
-                                life in a horrible car accident, and having to put college on hold. At aged 23, I
+                                life in a horrible car accident, and having to put college on hold. At <strong>aged
+                                    23</strong>, I
                                 enrolled
                                 back into college, with a burning desire to finish my degree. Currently I’m the project
-                                manager of a senior design team of 5 members, and we’re working on completing a
+                                manager of a senior design team of 5 members and we’re working on completing a
                                 yearlong,
-                                open source research project, and on track to graduate December 2019. At a young age I
+                                open source research project, and on track to graduate <strong>December 2019</strong>.
+                                At a young age I
                                 told
-                                my mother that I will be successful, that I will buy her a house to honor the sacrifices
-                                she
-                                made bringing me to the United States. I wholeheartedly intend to keep that promise I
-                                made
-                                to my mother, and I’m determined to keep working as hard as I can until that day
-                                comes.<strong> Why
-                                    not get in touch via the methods below… or see my my learning progress on Treehouse
-                                </strong>
+                                my mother that I will be successful enough to buy her a house to honor the sacrifices
+                                she had to make, to be able to bring me to the United States. I wholeheartedly intend to
+                                keep the promise I
+                                to her,
+                                and I’m determined to keep working as hard as I can until that day
+                                comes.<strong> If you would like to get in touch or see my learning progress on
+                                    Treehouse, you can do so via the methods below </strong>
                             </p>
                         </div>
                     </div>
@@ -143,7 +150,8 @@
             <!-- Contact & Personal Profiles -->
             <div class="container pb-5 pt-5">
                 <div class="row justify-content-center">
-                    <div class="col-sm-12 col-md-4 pb-sm-5 text-center">
+
+                    <div class="col-sm-12 col-lg-4 pb-sm-5 text-center">
                         <div class="row justify-content-center pb-3">
                             <a href="mailto: alex@alexjnunez.com">
                                 <embed src="../images/icons/mail_icon2.svg" height="50">
@@ -155,7 +163,7 @@
                         </a>
                     </div>
 
-                    <div class="col-sm-12 col-md-4 pb-sm-4 text-center">
+                    <div class="col-sm-12 col-lg-4 pb-sm-4 text-center">
                         <div class="row justify-content-center pb-3 pt-4 pt-md-0">
                             <a href="http://www.linkedin.com/in/alex-nunez-76545617b" target="_blank">
                                 <embed src="../images/icons/linkedin-black.svg" height="50">
@@ -167,7 +175,7 @@
                         </a>
                     </div>
 
-                    <div class="col-sm-12 col-md-4 text-center">
+                    <div class="col-sm-12 col-lg-4 text-center">
                         <div class="row justify-content-center pb-3 pt-4 pt-md-0">
                             <embed src="../images/icons/treehouse-icon.svg" height="50">
                         </div>
@@ -187,8 +195,8 @@
                     <!-- Short Bio ----->
                     <div class="col-lg-4">
                         <h3 class="section-heading">Short Bio</h3>
-                        <ul class="pt-2" style="list-style: none;">
-                            <!-- born section ----->
+                        <ul class="pt-2">
+                            <!-- Born Section ----->
                             <li>
                                 <p><strong>Born</strong></p>
                             </li>
@@ -204,13 +212,13 @@
                                 </li>
                             </ul>
 
-                            <!-- Personality section ----->
+                            <!-- Personality Section ----->
                             <li>
                                 <p></p><strong>Personality Type</strong></p>
                             </li>
                             <li style="list-style: none;">
                                 <a href="https://www.16personalities.com/profiles/98c606a8eec94" target="_blank"><embed
-                                        src="../images/personality2.png" id="img-personality"></a>
+                                        src="../images/personality.png" id="img-personality"></a>
                                 <P>
                                     According to <a href="https://www.16personalities.com/profiles/98c606a8eec94"
                                         target="_blank"><span class="text-pink">16personalities.com</span></a>
@@ -219,7 +227,7 @@
                                 </P>
                             </li>
 
-                            <!-- Residence section ----->
+                            <!-- Residence Section ----->
                             <li>
                                 <p><strong>Residence</strong></p>
                             </li>
@@ -231,7 +239,7 @@
                                 </li>
                             </ul>
 
-                            <!-- Occupation section ----->
+                            <!-- Occupation Section ----->
                             <li>
                                 <p class="pt-3"><strong>Occupation</strong></p>
                             </li>
@@ -413,14 +421,12 @@
             </div>
 
 
-
-
-
-
         </main>
 
         <footer>
-
+            <div class="container-fluid bg-black text-center pt-2 pb-2">
+                <p class="text-grey">JOSE A NUNEZ <span class="text-pink">&copy;</span>2019</p>
+            </div>
         </footer>
 
         <!-- Optional JavaScript -->
