--- a/html/Bio.html
+++ b/html/Bio.html
@@ -154,7 +154,25 @@
                     <div class="col-sm-12 col-lg-4 pb-sm-5 text-center">
                         <div class="row justify-content-center pb-3">
                             <a href="mailto: alex@alexjnunez.com">
-                                <embed src="../images/icons/mail_icon2.svg" height="50">
+                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                                    style="enable-background:new 0 0 512 512;" xml:space="preserve" height="50">
+                                    <g>
+                                        <g>
+                                            <g>
+                                                <path
+                                                    d="M10.688,95.156C80.958,154.667,204.26,259.365,240.5,292.01c4.865,4.406,10.083,6.646,15.5,6.646
+                                               c5.406,0,10.615-2.219,15.469-6.604c36.271-32.677,159.573-137.385,229.844-196.896c4.375-3.698,5.042-10.198,1.5-14.719
+                                               C494.625,69.99,482.417,64,469.333,64H42.667c-13.083,0-25.292,5.99-33.479,16.438C5.646,84.958,6.313,91.458,10.688,95.156z" />
+                                                <path d="M505.813,127.406c-3.781-1.76-8.229-1.146-11.375,1.542C416.51,195.01,317.052,279.688,285.76,307.885
+                                               c-17.563,15.854-41.938,15.854-59.542-0.021c-33.354-30.052-145.042-125-208.656-178.917c-3.167-2.688-7.625-3.281-11.375-1.542
+                                               C2.417,129.156,0,132.927,0,137.083v268.25C0,428.865,19.135,448,42.667,448h426.667C492.865,448,512,428.865,512,405.333
+                                               v-268.25C512,132.927,509.583,129.146,505.813,127.406z" />
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg>
+
                             </a>
                         </div>
 
@@ -166,7 +184,24 @@
                     <div class="col-sm-12 col-lg-4 pb-sm-4 text-center">
                         <div class="row justify-content-center pb-3 pt-4 pt-md-0">
                             <a href="http://www.linkedin.com/in/alex-nunez-76545617b" target="_blank">
-                                <embed src="../images/icons/linkedin-black.svg" height="50">
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                    version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512 512"
+                                    style="enable-background:new 0 0 512 512;" xml:space="preserve" height="50">
+                                    <g>
+                                        <g>
+                                            <path
+                                                d="M467,198.699c-37.8-33.6-86.4-32.399-105.601-30.599c-26.699,2.999-45.599,13.2-59.399,24.3V181c0-8.401-6.599-15-15-15    H180c-8.401,0-15,6.599-15,15v300c0,8.399,6.599,15,15,15h107c8.401,0,15-6.601,15-15V309.399c0-15,19.799-30,40.8-30.899    c14.7-0.3,32.401,5.7,34.2,36V481c0,8.399,6.599,15,15,15h105c3.9,0,7.8-1.5,10.499-4.501C510.5,488.8,512,484.9,512,481V320.499    C511.7,266.199,496.7,225.399,467,198.699z" />
+                                        </g>
+                                        <g>
+                                            <path
+                                                d="M120,166H15c-8.401,0-15,6.599-15,15v300c0,8.399,6.599,15,15,15h105c8.401,0,15-6.601,15-15V181    C135,172.599,128.401,166,120,166z" />
+                                        </g>
+                                        <g>
+                                            <path
+                                                d="M67.5,16C30.3,16,0,42.999,0,76c0,32.999,30.3,60,67.5,60S135,108.999,135,76C135,42.999,104.7,16,67.5,16z" />
+                                        </g>
+                                    </g>
+                                </svg>
                             </a>
                         </div>
 
@@ -177,7 +212,21 @@
 
                     <div class="col-sm-12 col-lg-4 text-center">
                         <div class="row justify-content-center pb-3 pt-4 pt-md-0">
-                            <embed src="../images/icons/treehouse-icon.svg" height="50">
+                            <a href="http://www.teamtreehouse.com/josenunez7" target="_blank">
+                                <svg xmlns:dc="http://purl.org/dc/elements/1.1/"
+                                    xmlns:cc="http://creativecommons.org/ns#"
+                                    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                                    xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
+                                    height="50" version="1.1" id="svg10" viewBox="0 0 139 32.049999"
+                                    preserveAspectRatio="xMinYMin meet">
+                                    <g transform="translate(0,0.075)" id="g12">
+                                        <path style="fill:#000000" id="path14"
+                                            d="m 42.8,21 c -0.4,0.1 -0.9,0.2 -1.4,0.2 -1,0 -1.4,-0.6 -1.4,-1.6 l 0,-4.5 2.8,0 c 0.7,0 1.4,-0.5 1.4,-1.3 0,-0.8 -0.6,-1.3 -1.4,-1.3 L 40,12.5 40,11 C 40,10.1 39.3,9.5 38.5,9.5 37.7,9.5 37,10.2 37,11 l 0,8.7 c 0,2.5 1.2,4.3 4,4.3 0.8,0 1.9,-0.1 2.7,-0.5 0.7,-0.3 0.9,-0.8 0.9,-1.3 0,-0.7 -0.7,-1.4 -1.8,-1.2 z m 10,-8.9 C 52.4,12 51.6,11.9 50.9,11.9 48.4,11.9 47,13.4 47,15.7 l 0,6.8 c 0,0.8 0.7,1.5 1.5,1.5 0.8,0 1.5,-0.7 1.5,-1.5 l 0,-6.2 c 0,-1 0.4,-1.4 1.1,-1.4 0.7,0 1.1,0.2 1.7,0.2 0.9,0 1.4,-0.8 1.4,-1.4 -0.1,-0.8 -0.5,-1.3 -1.4,-1.6 z m 8.3,-0.2 c -2.8,0 -4.8,1.8 -5.1,4.7 0,0.7 -0.1,1.9 0,2.8 0.2,2.8 2.2,4.7 5.2,4.7 1.4,0 2.7,-0.3 3.5,-0.8 0.6,-0.4 0.7,-0.8 0.7,-1.2 0,-0.8 -0.7,-1.6 -1.9,-1.2 -0.7,0.3 -1.5,0.5 -2.3,0.5 -1.4,0 -2.5,-0.7 -2.5,-2.1 l 0,-0.3 5.7,0 c 1,0 1.5,-0.6 1.5,-1.5 l 0,-0.5 C 66,13.9 64,11.9 61.1,11.9 Z M 63,17 58.8,17 c 0,-1.5 0.7,-2.5 2.3,-2.5 1.4,0 2.2,0.9 2.1,2.2 0,0.2 0,0.3 -0.2,0.3 z m 10.1,-5.1 c -2.8,0 -4.8,1.8 -5.1,4.7 0,0.7 -0.1,1.9 0,2.8 0.2,2.8 2.2,4.7 5.2,4.7 1.4,0 2.7,-0.3 3.5,-0.8 0.6,-0.4 0.7,-0.8 0.7,-1.2 0,-0.8 -0.7,-1.6 -1.9,-1.2 -0.7,0.3 -1.5,0.5 -2.3,0.5 -1.4,0 -2.5,-0.7 -2.5,-2.1 l 0,-0.3 5.7,0 c 1,0 1.5,-0.6 1.5,-1.5 l 0,-0.5 C 78,13.9 76,11.9 73.1,11.9 Z M 75,17 70.8,17 c 0,-1.5 0.7,-2.5 2.3,-2.5 1.4,0 2.2,0.9 2.1,2.2 0,0.2 0,0.3 -0.2,0.3 z m 48.6,-0.1 -1.6,-0.4 c -1,-0.2 -1.3,-0.5 -1.3,-1 0,-0.5 0.5,-0.9 1.6,-0.9 0.6,0 1.3,0.2 1.9,0.5 0.7,0.4 1.5,0.3 1.9,-0.2 0.5,-0.5 0.5,-1.4 -0.1,-2 -0.8,-0.6 -2.2,-1 -3.6,-1 -2.6,0 -4.5,1.3 -4.5,3.7 0,1.9 1.4,2.9 3.2,3.4 0.9,0.2 0.8,0.2 1.6,0.4 0.9,0.2 1.3,0.6 1.3,1 0,0.6 -0.5,1 -1.7,1 -1,0 -1.9,-0.3 -2.6,-0.7 -0.7,-0.5 -1.5,-0.3 -1.9,0.3 -0.4,0.6 -0.3,1.4 0.3,1.8 0.8,0.7 2.1,1.3 4.2,1.3 2.6,0 4.6,-1.4 4.6,-3.8 0,-1.8 -1.1,-2.9 -3.3,-3.4 z m 13.9,2.1 c 1,0 1.5,-0.6 1.5,-1.5 l 0,0 0,-0.5 c 0,-3.1 -2,-5.1 -4.9,-5.1 -2.8,0 -4.8,1.8 -5.1,4.7 0,0.7 -0.1,1.9 0,2.8 0.2,2.8 2.2,4.7 5.2,4.7 1.4,0 2.7,-0.3 3.5,-0.8 0.6,-0.4 0.7,-0.8 0.7,-1.2 0,-0.8 -0.7,-1.6 -1.9,-1.2 -0.7,0.3 -1.5,0.5 -2.3,0.5 -1.4,0 -2.5,-0.7 -2.5,-2.1 l 0,-0.3 5.8,0 z m -3.4,-4.5 c 1.4,0 2.2,0.9 2.1,2.2 0,0.2 -0.1,0.3 -0.2,0.3 l -4.2,0 c 0,-1.5 0.8,-2.5 2.3,-2.5 z M 97.5,11.9 c -3,0 -5.2,1.9 -5.5,4.5 -0.1,0.9 -0.1,2.3 0,3.2 0.2,2.6 2.5,4.5 5.5,4.5 3,0 5.2,-1.9 5.4,-4.5 0.1,-0.9 0.1,-2.2 0,-3.1 -0.2,-2.7 -2.4,-4.6 -5.4,-4.6 z m 2.4,7.2 c -0.1,1.3 -1,2.1 -2.4,2.1 -1.4,0 -2.3,-0.9 -2.4,-2.1 0,-0.6 0,-1.6 0,-2.2 0.1,-1.3 1,-2.1 2.4,-2.1 1.4,0 2.3,0.9 2.4,2.1 0.1,0.6 0.1,1.6 0,2.2 z M 85.6,11.9 c -1.1,0 -2.3,0.4 -2.7,0.9 l 0,0 0,-3.2 c 0,-0.9 -0.6,-1.5 -1.4,-1.5 -0.8,0 -1.4,0.7 -1.4,1.5 l 0,12.9 c 0,0.8 0.7,1.5 1.5,1.5 0.8,0 1.4,-0.7 1.4,-1.5 l 0,-6.7 c 0.5,-0.5 1.3,-0.9 2.3,-0.9 1.2,0 1.9,0.7 1.9,2.1 l 0,5.5 c 0,0.9 0.6,1.6 1.4,1.6 0.9,0 1.5,-0.7 1.5,-1.6 l 0,-5.7 C 90,13.6 88.4,11.9 85.6,11.9 Z m 28,0.1 c -0.8,0 -1.5,0.7 -1.5,1.5 l 0,7.1 c -0.5,0.3 -1.2,0.6 -2.1,0.6 -1.2,0 -2.1,-0.7 -2.1,-2.1 l 0,-5.6 c 0,-0.9 -0.7,-1.6 -1.5,-1.6 -0.9,0 -1.4,0.7 -1.4,1.6 l 0,5.7 c 0,3.1 1.8,4.8 4.9,4.8 2.3,0 3.9,-0.8 4.6,-1.3 0.4,-0.2 0.5,-0.5 0.5,-1 l 0,-8.2 c 0,-0.8 -0.6,-1.5 -1.4,-1.5 z" />
+                                        <path style="fill:#000000" id="path16"
+                                            d="M 28.4,7 C 28,6.8 27.1,6.4 26.1,5.8 25,5.2 23.3,6.2 22.2,7.9 l -1.9,3.2 c -0.7,1.4 -0.6,2.9 0.3,4.2 l 0.1,0.1 c 0.9,1.3 2.1,2.4 2.4,2.8 0.2,0.2 0.4,0.6 0.5,0.9 0.3,1.2 -0.3,2.3 -1.5,2.6 C 21,22 19.8,21.3 19.4,20.2 19.3,19.9 19.3,19.6 19.3,19.3 19.4,18.8 19.2,18 18.5,17.4 17.8,16.6 16.4,18.1 16,19.5 l 0,0.1 c -0.4,1.5 -0.7,2.7 -0.6,2.8 0,0.1 0.1,0.2 0.1,0.2 0.6,1.2 0.2,2.6 -1,3.2 -1.2,0.6 -2.7,0.2 -3.3,-1 -0.6,-1.2 -0.2,-2.6 1,-3.2 0.1,0 0.1,-0.1 0.2,-0.1 0.1,0 0.3,-0.7 0.6,-1.4 0.2,-0.7 0.4,-1.3 0.4,-1.3 0,-0.1 0,-0.2 0.1,-0.2 l 1.2,-4.2 -1.2,2.5 c -0.2,-0.5 -0.4,-0.5 -1,-0.1 -0.3,0.2 -0.9,0.7 -1.1,0.9 -0.5,0.4 -0.9,1.1 -1.1,1.5 -0.1,0.3 -0.3,0.5 -0.5,0.7 -0.9,0.8 -2.3,0.6 -3,-0.3 -0.7,-0.9 -0.5,-2.1 0.4,-2.8 0.3,-0.2 0.6,-0.4 0.9,-0.4 0.5,-0.1 2.4,-1.3 3.5,-2 0.2,-0.1 0.4,-0.3 0.5,-0.4 l 2.9,-2.1 -2.6,1.4 c 0,0 -0.3,0 -0.6,0 -0.8,0.1 -1.8,0.2 -2,0.5 -0.1,0.1 -0.2,0.3 -0.4,0.4 -0.8,0.4 -2,0.2 -2.7,-0.6 -0.6,-0.9 -0.4,-2 0.4,-2.6 0.5,-0.3 0.9,-0.4 1.3,-0.4 0.7,0 2.5,0.4 4,0.1 l 0.4,-0.1 c 1.5,-0.3 3.3,-1.5 4,-2.9 0,0 0.7,-1.3 1.6,-2.7 0.9,-1.5 0.8,-3.1 -0.1,-3.7 l -1.7,-1 c -0.9,-0.5 -2.3,-0.5 -3.2,0 L 1.6,6.8 C 0.7,7.3 0,8.6 0,9.6 l 0,12.8 c 0,1 0.7,2.1 1.6,2.6 l 11.9,6.6 c 0.9,0.5 2.3,0.5 3.2,0 L 28.4,24.9 C 29.3,24.4 30,23.3 30,22.3 L 30,9.6 C 30,8.6 29.3,7.5 28.4,7 Z" />
+                                    </g>
+                                </svg>
+                            </a>
                         </div>
 
                         <a href="http://www.teamtreehouse.com/josenunez7" target="_blank">
