few minor changes site is finished

--- a/html/Bio.html
+++ b/html/Bio.html
@@ -32,7 +32,7 @@
                 <div class="container">
 
                     <div data-toggle="collapse" data-target=".navbar-collapse.show">
-                        <a class="navbar-brand nav-font" href="#">About</a>
+                        <a class="navbar-brand nav-font" href="./index.html#about">About</a>
                     </div>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -44,11 +44,11 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <!-- left nav items -->
                         <div class="navbar-nav" data-toggle="collapse" data-target=".navbar-collapse.show">
-                            <a class="nav-item nav-link " href="#experience">Experience <span
+                            <a class="nav-item nav-link " href="./index.html#experience">Experience <span
                                     class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link " href="#project">Projects</a>
-                            <a class="nav-item nav-link " href="#skills">Skills</a>
-                            <a class="nav-item nav-link " href="#contact">Contact</a>
+                            <a class="nav-item nav-link " href="./index.html#project">Projects</a>
+                            <a class="nav-item nav-link " href="./index.html#skills">Skills</a>
+                            <a class="nav-item nav-link " href="./index.html#contact">Contact</a>
                         </div>
 
                         <!-- right nav items -->
